# cmdNote

./: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  README.md  Read.cpp  Source.cpp  Write.cpp  Write.h  build.ninja  cmake_install.cmake  cmdNoteConfig.h  cmdNoteConfig.h.in
lib/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  Notes  Source.cpp  build.ninja  cmake_install.cmake  noteFuncs.cpp  noteFuncs.h
